@@ -4581,7 +4581,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|Throwable
 name|x
 parameter_list|)
 block|{
@@ -4589,6 +4589,36 @@ name|x
 operator|.
 name|printStackTrace
 argument_list|()
+expr_stmt|;
+name|HMSHandler
+operator|.
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Metastore Thrift Server threw an exception. Exiting..."
+argument_list|)
+expr_stmt|;
+name|HMSHandler
+operator|.
+name|LOG
+operator|.
+name|error
+argument_list|(
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|x
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+literal|1
+argument_list|)
 expr_stmt|;
 block|}
 block|}
